refactor: unify DTOs with validation for service logs, reminders, and notes