@@ -1,5 +1,6 @@
 package com.wrenchlog.wrenchlog.controller;
 
+import com.wrenchlog.wrenchlog.dto.ServiceLogCreateDTO;
 import com.wrenchlog.wrenchlog.dto.ServiceLogResponseDTO;
 import com.wrenchlog.wrenchlog.model.ServiceLog;
 import com.wrenchlog.wrenchlog.model.User;
@@ -35,20 +36,15 @@ class ServiceLogControllerTest {
     }
 
     @Test
-    void getServicesForVehicle_returnsLogsForOwnedVehicle() {
+    void getServicesForVehicle_returnsLogs_whenOwner() {
         User owner = new User("alice", "alice@test.com", "hashed");
         owner.setId(1L);
 
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog log = new ServiceLog();
+        ServiceLog log = new ServiceLog("Oil change", new BigDecimal("49.99"), 51000, LocalDate.of(2026, 1, 15), vehicle);
         log.setId(100L);
-        log.setDescription("Oil change");
-        log.setCost(BigDecimal.valueOf(49.99));
-        log.setKilometersAtService(51000);
-        log.setServiceDate(LocalDate.of(2026, 1, 15));
-        log.setVehicle(vehicle);
 
         when(vehicleAccessService.getOwnedVehicleOrThrow(10L, owner)).thenReturn(vehicle);
         when(serviceLogRepository.findByVehicleId(10L)).thenReturn(List.of(log));
@@ -56,12 +52,9 @@ class ServiceLogControllerTest {
         List<ServiceLogResponseDTO> response = serviceLogController.getServicesForVehicle(10L, owner);
 
         assertEquals(1, response.size());
-        ServiceLogResponseDTO dto = response.getFirst();
+        ServiceLogResponseDTO dto = response.get(0);
         assertEquals(100L, dto.getId());
         assertEquals("Oil change", dto.getDescription());
-        assertEquals(BigDecimal.valueOf(49.99), dto.getCost());
-        assertEquals(51000, dto.getKilometersAtService());
-        assertEquals(LocalDate.of(2026, 1, 15), dto.getServiceDate());
         assertEquals(10L, dto.getVehicleId());
 
         verify(vehicleAccessService).getOwnedVehicleOrThrow(10L, owner);
@@ -82,32 +75,23 @@ class ServiceLogControllerTest {
     }
 
     @Test
-    void addServiceLog_returnsCreatedWithCorrectData() {
+    void addServiceLog_returnsCreated_withCorrectData() {
         User owner = new User("alice", "alice@test.com", "hashed");
         owner.setId(1L);
 
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog incoming = new ServiceLog();
-        incoming.setDescription("Brake pads");
-        incoming.setCost(BigDecimal.valueOf(120.00));
-        incoming.setKilometersAtService(52000);
-        incoming.setServiceDate(LocalDate.of(2026, 2, 1));
+        ServiceLogCreateDTO dto = new ServiceLogCreateDTO("Brake pads", new BigDecimal("120.00"), 52000, LocalDate.of(2026, 2, 1));
 
-        ServiceLog saved = new ServiceLog();
+        ServiceLog saved = new ServiceLog("Brake pads", new BigDecimal("120.00"), 52000, LocalDate.of(2026, 2, 1), vehicle);
         saved.setId(101L);
-        saved.setDescription("Brake pads");
-        saved.setCost(BigDecimal.valueOf(120.00));
-        saved.setKilometersAtService(52000);
-        saved.setServiceDate(LocalDate.of(2026, 2, 1));
-        saved.setVehicle(vehicle);
 
         when(vehicleAccessService.getOwnedVehicleOrThrow(10L, owner)).thenReturn(vehicle);
         when(serviceLogRepository.save(any(ServiceLog.class))).thenReturn(saved);
 
         ResponseEntity<ServiceLogResponseDTO> response =
-                serviceLogController.addServiceLog(10L, incoming, owner);
+                serviceLogController.addServiceLog(10L, dto, owner);
 
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertEquals(101L, response.getBody().getId());
@@ -122,13 +106,13 @@ class ServiceLogControllerTest {
         User attacker = new User("bob", "bob@test.com", "hashed");
         attacker.setId(2L);
 
-        ServiceLog incoming = new ServiceLog();
+        ServiceLogCreateDTO dto = new ServiceLogCreateDTO("Brake pads", new BigDecimal("120.00"), 52000, LocalDate.of(2026, 2, 1));
 
         when(vehicleAccessService.getOwnedVehicleOrThrow(10L, attacker))
                 .thenThrow(new ResponseStatusException(HttpStatus.FORBIDDEN));
 
         assertThrows(ResponseStatusException.class,
-                () -> serviceLogController.addServiceLog(10L, incoming, attacker));
+                () -> serviceLogController.addServiceLog(10L, dto, attacker));
 
         verify(serviceLogRepository, never()).save(any());
     }
@@ -141,49 +125,36 @@ class ServiceLogControllerTest {
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog existing = new ServiceLog();
+        ServiceLog existing = new ServiceLog("Old description", new BigDecimal("10.00"), 50000, LocalDate.of(2026, 1, 1), vehicle);
         existing.setId(100L);
-        existing.setVehicle(vehicle);
 
-        ServiceLog updatedInput = new ServiceLog();
-        updatedInput.setDescription("Updated description");
-        updatedInput.setCost(BigDecimal.valueOf(75.00));
-        updatedInput.setKilometersAtService(53000);
-        updatedInput.setServiceDate(LocalDate.of(2026, 3, 1));
-
-        ServiceLog savedResult = new ServiceLog();
-        savedResult.setId(100L);
-        savedResult.setDescription("Updated description");
-        savedResult.setCost(BigDecimal.valueOf(75.00));
-        savedResult.setKilometersAtService(53000);
-        savedResult.setServiceDate(LocalDate.of(2026, 3, 1));
-        savedResult.setVehicle(vehicle);
+        ServiceLogCreateDTO dto = new ServiceLogCreateDTO("Updated description", new BigDecimal("75.00"), 53000, LocalDate.of(2026, 3, 1));
 
         when(serviceLogRepository.findById(100L)).thenReturn(Optional.of(existing));
         when(vehicleAccessService.getOwnedVehicleOrThrow(10L, owner)).thenReturn(vehicle);
-        when(serviceLogRepository.save(any(ServiceLog.class))).thenReturn(savedResult);
+        when(serviceLogRepository.save(any(ServiceLog.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         ResponseEntity<ServiceLogResponseDTO> response =
-                serviceLogController.modifyServiceLog(100L, 10L, updatedInput, owner);
+                serviceLogController.modifyServiceLog(100L, 10L, dto, owner);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals("Updated description", response.getBody().getDescription());
-        assertEquals(BigDecimal.valueOf(75.00), response.getBody().getCost());
+        assertEquals(new BigDecimal("75.00"), response.getBody().getCost());
 
         verify(vehicleAccessService).assertOwnership(vehicle, owner);
     }
 
     @Test
-    void modifyServiceLog_throws404_whenLogNotFound() {
+    void modifyServiceLog_throwsNotFound_whenLogMissing() {
         User owner = new User("alice", "alice@test.com", "hashed");
         owner.setId(1L);
 
-        ServiceLog updatedInput = new ServiceLog();
+        ServiceLogCreateDTO dto = new ServiceLogCreateDTO("Title", new BigDecimal("10.00"), 1000, LocalDate.now());
 
         when(serviceLogRepository.findById(999L)).thenReturn(Optional.empty());
 
         ResponseStatusException exception = assertThrows(ResponseStatusException.class,
-                () -> serviceLogController.modifyServiceLog(999L, 10L, updatedInput, owner));
+                () -> serviceLogController.modifyServiceLog(999L, 10L, dto, owner));
 
         assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
         verify(serviceLogRepository, never()).save(any());
@@ -200,18 +171,17 @@ class ServiceLogControllerTest {
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog existing = new ServiceLog();
+        ServiceLog existing = new ServiceLog("Title", new BigDecimal("10.00"), 1000, LocalDate.now(), vehicle);
         existing.setId(100L);
-        existing.setVehicle(vehicle);
 
-        ServiceLog updatedInput = new ServiceLog();
+        ServiceLogCreateDTO dto = new ServiceLogCreateDTO("Title", new BigDecimal("10.00"), 1000, LocalDate.now());
 
         when(serviceLogRepository.findById(100L)).thenReturn(Optional.of(existing));
         doThrow(new ResponseStatusException(HttpStatus.FORBIDDEN))
                 .when(vehicleAccessService).assertOwnership(vehicle, attacker);
 
         assertThrows(ResponseStatusException.class,
-                () -> serviceLogController.modifyServiceLog(100L, 10L, updatedInput, attacker));
+                () -> serviceLogController.modifyServiceLog(100L, 10L, dto, attacker));
 
         verify(serviceLogRepository, never()).save(any());
     }
@@ -224,9 +194,8 @@ class ServiceLogControllerTest {
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog log = new ServiceLog();
+        ServiceLog log = new ServiceLog("Title", new BigDecimal("10.00"), 1000, LocalDate.now(), vehicle);
         log.setId(100L);
-        log.setVehicle(vehicle);
 
         when(serviceLogRepository.findById(100L)).thenReturn(Optional.of(log));
 
@@ -237,7 +206,7 @@ class ServiceLogControllerTest {
     }
 
     @Test
-    void deleteServiceLog_throws404_whenLogNotFound() {
+    void deleteServiceLog_throwsNotFound_whenLogMissing() {
         User owner = new User("alice", "alice@test.com", "hashed");
         owner.setId(1L);
 
@@ -261,9 +230,8 @@ class ServiceLogControllerTest {
         Vehicle vehicle = new Vehicle("Toyota", "Corolla", 2020, 50000, owner);
         vehicle.setId(10L);
 
-        ServiceLog log = new ServiceLog();
+        ServiceLog log = new ServiceLog("Title", new BigDecimal("10.00"), 1000, LocalDate.now(), vehicle);
         log.setId(100L);
-        log.setVehicle(vehicle);
 
         when(serviceLogRepository.findById(100L)).thenReturn(Optional.of(log));
         doThrow(new ResponseStatusException(HttpStatus.FORBIDDEN))
